--- a/src/pages/product/style/ProductDetail.css
+++ b/src/pages/product/style/ProductDetail.css
@@ -48,6 +48,7 @@ font-face {
 /* ------------slick-------- */
 
 .proBread{
+    font-family: notoSansTC-Medium;
     color: #707070 !important;
 }
 .proBread1{
