--- a/src/pages/user/styles/Add.scss
+++ b/src/pages/user/styles/Add.scss
@@ -16,7 +16,7 @@
 .u-body {
   font-family: 'Noto Sans TC Medium', sans-serif;
   width: calc(100% - 70px);
-  height: 100%;
+  height: 180vh;
   background-color: #e8e8e8;
   padding: 0 10vw;
 }
