--- a/src/pages/user/styles/OrderProDetail.scss
+++ b/src/pages/user/styles/OrderProDetail.scss
@@ -1,104 +1,110 @@
- /* ----- 表單 ----- */
- .u-box {
-    margin-top: 40px;
+/* ----- 表單 ----- */
+.u-box {
+  margin-top: 40px;
+  width: 100%;
+  height: 254px;
+  border: 2px solid #707070;
+  font-size: 16px;
+  font-family: NotoSansTC-Medium;
+}
+
+@media screen and (max-width: 576px) {
+  .u-box {
     width: 100%;
-    height: 254px;
-    border: 2px solid #707070;
-    font-size: 16px;
-    font-family: NotoSansTC-Medium;
+    margin-left: 20px;
+  }
 }
 
-@media screen and (max-width:576px) {
-    .u-box{
-        width: 100%;
-        margin-left: 20px;
-    }
+.u-creditNews {
+  background-color: #707070;
+  color: #fff;
+  height: 50px;
+  line-height: 50px;
 }
 
-.u-creditNews{
-    background-color: #707070;
-    color: #fff;
-    height: 50px;
-    line-height: 50px;
+.u-creditType,
+.u-creditDate {
+  height: 50px;
+  line-height: 50px;
 }
 
-.u-creditType, .u-creditDate{
-    height: 50px;
-    line-height: 50px;
-}
-
-.u-creditNum, .u-creditNT{
-    height: 50px;
-    line-height: 50px;
-    background-color: #c7c7c7;
+.u-creditNum,
+.u-creditNT {
+  height: 50px;
+  line-height: 50px;
+  background-color: #c7c7c7;
 }
 
 /* ----- 商品細節 ----- */
 .u-boxPro {
-    font-family: NotoSansTC-Medium;
+  font-family: NotoSansTC-Medium;
 }
 
-.u-boxPro{
-    margin-top: 40px;
+.u-boxPro {
+  margin-top: 40px;
+  width: 100%;
+  height: 125px;
+  border: 2px solid #707070;
+  // position: relative;
+}
+
+@media screen and (max-width: 576px) {
+  .u-boxPro {
     width: 100%;
-    height: 125px;
-    border:2px solid #707070;
-    // position: relative;
-}
-
-@media screen and (max-width:576px) {
-    .u-boxPro{
-        width: 100%;
-        margin-left: 20px;
-    }
+    margin-left: 20px;
+  }
 }
 
 .u-proImg {
-    width: 100px;
-    height: 100px;
-    background-color: #c7c7c7;
-    margin-top: 12px;
-    margin-left: 12px;
+  width: 100px;
+  height: 100px;
+  background-color: #c7c7c7;
+  margin-top: 12px;
+  margin-left: 12px;
 }
 
 .u-proImg > img {
-    width: 100%;
-    height: 100%;
+  width: 100%;
+  height: 100%;
 }
 
-.u-proText, .u-proSize, .u-proQty, .u-proTotalPrice {
-    margin-top: 30px;
-    font-size: 16px;
+.u-proText,
+.u-proSize,
+.u-proQty,
+.u-proTotalPrice {
+  margin-top: 30px;
+  font-size: 16px;
 }
 
 .u-myEVAL {
-    width: 150px;
-    height: 43px;
-    background-color: #1D0AFF;
-    text-align: center;
-    line-height: 30px;
-    margin-top: 5px;
-    margin-left: -15px;
-    font-family: NotoSansTC-Medium;
-    font-size: 18px;
-    border-radius: 0px;
+  width: 150px;
+  height: 43px;
+  background-color: #1d0aff;
+  text-align: center;
+  line-height: 30px;
+  margin-top: 5px;
+  margin-left: -15px;
+  font-family: NotoSansTC-Medium;
+  font-size: 18px;
+  border-radius: 0px;
 }
 
-.btn-link, .btn-link:hover{
-    color: #fff;
+.btn-link,
+.btn-link:hover {
+  color: #fff;
 }
 
 /* ===== 折疊 ===== */
 .u-Card {
-    width: 100%;
-    background-color: #e8e8e8;
-    border: #e8e8e8;
-    // margin-left: 70px;
-    // position: relative;
+  width: 100%;
+  background-color: #e8e8e8;
+  border: #e8e8e8;
+  // margin-left: 70px;
+  // position: relative;
 }
 
 .u-CardHeader {
-    background-color: #e8e8e8;
+  background-color: #e8e8e8;
 }
 
 .u-collapse {
@@ -108,40 +114,48 @@
 
 // ===== 前往評價 btn =====
 .u-goEVAL {
-    width: 150px;
-    height: 45px;
-    border: 2px solid #000;
-    line-height: 40px;
-    text-align: center;
-    margin-top: -43px;
-    margin-left: 150px;
-    font-family: NotoSansTC-Medium;
-    font-size: 18px;
+  width: 150px;
+  height: 45px;
+  border: 2px solid #000;
+  line-height: 40px;
+  text-align: center;
+  // margin-top: -43px;
+  // margin-left: 150px;
+  margin-top: 40px;
+  margin-right: 40px;
+  font-family: NotoSansTC-Medium;
+  font-size: 18px;
+  &:hover {
+    background-color: #000;
+  }
 }
 
 .u-goEVAL > a {
-    color: #000;
+  color: #000;
+  &:hover{
+      color: #fff;
+  }
 }
 
 // ===== 回訂單 btn =====
 .u-back {
-    width: 180px;
-    height: 55px;
-    background-color: #000;
-    text-align: center;
-    line-height: 55px;
-    font-size: 16px;
-    padding-bottom: 30px;
-    margin-top: 40px;
-    margin-left: 30vw;
-    font-family: NotoSansTC-Medium;
-    font-size: 18px;
+  width: 180px;
+  height: 55px;
+  background-color: #000;
+  text-align: center;
+  line-height: 55px;
+  font-size: 16px;
+  padding-bottom: 30px;
+  margin-top: 40px;
+  margin-left: 30vw;
+  font-family: NotoSansTC-Medium;
+  font-size: 18px;
 }
 
-.u-link{
-    color: #fff;
+.u-link {
+  color: #fff;
 }
 
-.u-link:hover{
-    color: #fff;
+.u-link:hover {
+  color: #fff;
 }
