--- a/src/pages/Auction/style/auction.scss
+++ b/src/pages/Auction/style/auction.scss
@@ -189,9 +189,9 @@ time, mark, audio, video {
 }
 
 .auctionsidebar li{
-    margin: 30px 0 0 0;
+    margin: 10px 0 0 0;
     list-style: none;
-    padding: 0 0 0 10%;
+    padding: 10px 0 10px 10%;
 }
 
 .categoryblack{
