--- a/src/pages/event/style/eventDetail.scss
+++ b/src/pages/event/style/eventDetail.scss
@@ -76,6 +76,16 @@ $egreylt: #E8E8E8;
     .ed-like-icon:hover{
         color: #81FC4D;
     }
+
+    .ed-like-icon2{
+        cursor: pointer;
+        font-size: 2.2rem;
+        color: #81FC4D;
+    }
+
+    .ed-like-icon2:hover{
+        color: white;
+    }
 }
 
 .ed-commu-btn button{
