--- a/src/pages/event/style/WorkshopUpload.scss
+++ b/src/pages/event/style/WorkshopUpload.scss
@@ -118,6 +118,10 @@ $egreylt: #E8E8E8;
 
 .eu-text{
     resize: none;
+    &:focus{
+        outline: none !important;
+        border: 1px solid #1D0AFF;
+    }
 }
 
 .eu-send-cmt{
