--- a/src/pages/event/style/eventList.scss
+++ b/src/pages/event/style/eventList.scss
@@ -87,6 +87,11 @@ $egreylt: #E8E8E8;
   border: 0px;
 }
 
+.ed-select:focus{
+    outline: none !important;
+    border: .5px solid #1D0AFF;
+}
+
 .ed-select-date {
   background: transparent;
   border: 0px;
@@ -163,4 +168,8 @@ $egreylt: #E8E8E8;
 
 .ed-pagenum:hover{
     color: #8F9CA2;
+}
+
+.ed-pagenum-active{
+    color: #3f5e6d;
 }
