Add Cart done /  news Error catch

--- a/src/pages/index/index.scss
+++ b/src/pages/index/index.scss
@@ -561,10 +561,15 @@
             color:#E8E8E8;
         }
         
+        // button{
+        //     color:#E8E8E8;
+        //     background:#000;
+        //     border:0;
+        //     line-height:0;
+        // }
         
         a:hover{
             color:#81FC4D;
-            text-decoration: none;
         }
 
         
