--- a/src/pages/user/styles/OrderProDetail.scss
+++ b/src/pages/user/styles/OrderProDetail.scss
@@ -68,6 +68,20 @@
   height: 100%;
 }
 
+.u-ticImg1 {
+  width: 200px;
+  height: 100px;
+  background-color: #c7c7c7;
+  margin-top: 12px;
+  margin-left: 12px;
+}
+
+.u-ticImg1 > img {
+  width: 100%;
+  height: 100%;
+}
+
+
 .u-proText,
 .u-proSize,
 .u-proQty,
