--- a/src/pages/Auction/style/auction.scss
+++ b/src/pages/Auction/style/auction.scss
@@ -37,6 +37,7 @@ time, mark, audio, video {
     background-color: #000;
     position:relative;
     color:#81FC4D;
+    overflow: hidden;
 }
 
 .auctionHeroSectionLogo{
@@ -61,6 +62,7 @@ time, mark, audio, video {
 
 .auctiondecoration{
     font-size:9.375rem;
+    // z-index: 0;
 }
 
 .auctiondecorationA{
@@ -196,4 +198,13 @@ time, mark, audio, video {
 
 .categoryblack{
     color:#000;
+}
+
+.threestatus{
+    position: absolute;
+    top: 0px;
+    left: 30%;
+    width: 100%;
+    height: 100%;
+    // z-index: -1;
 }
