--- a/src/pages/user/styles/Add.scss
+++ b/src/pages/user/styles/Add.scss
@@ -88,13 +88,15 @@
 }
 
 .u-membertile {
+  display: flex;
+  justify-content: center;
   text-align: center;
 }
 
 .u-membertile > p {
   width: 100%;
   font-family: EngraversBold;
-  font-size: 3rem;
+  font-size: 3.5rem;
   letter-spacing: 5px;
 }
 
@@ -142,15 +144,6 @@
   font-size: 30px;
   color: #fff;
   text-decoration: none;
-}
-
-//----- icons -----
-.u-FB {
-  width: 100%;
-  height: 70px;
-  border-bottom: 2px solid #000;
-  font-size: 50px;
-  margin-top: 20px;
 }
 
 //----- input 樣式 -----
