--- a/src/pages/product/style/ProductDetail.css
+++ b/src/pages/product/style/ProductDetail.css
@@ -427,3 +427,28 @@ font-family: notoSansTC-Medium;
     bottom: 0%;
     left: -100px;
 }
+
+.pro-nametext{
+    width: 100px;
+    height: 40px;
+    border:0;
+    position: absolute;
+    bottom: -70px;
+    left: -30px;
+    color: transparent;
+    background-color:transparent;
+}
+.pro-quickname2{
+    width: 80px;
+    height: 60px;
+    border:0;
+    position: absolute;
+    bottom: -70px;
+    left: 70px;
+}
+.proDe-sizepic{
+    width: 100%;
+}
+.proDe-sizepic img{
+    width: 100%;
+}
