--- a/src/pages/user/styles/OrderPro.scss
+++ b/src/pages/user/styles/OrderPro.scss
@@ -74,6 +74,7 @@
   color: #fff;
   height: 50px;
   line-height: 50px;
+
 }
 
 .u-ordrtInput1,
@@ -137,3 +138,19 @@
 .u-link:hover {
   color: #fff;
 }
+
+// .u-orderId {
+//   margin-left: 25px;
+// }
+
+// .u-orderDate {
+//   margin-left: 50px;
+// }
+
+// .u-payType{
+//   margin-left: 15px;
+// }
+
+// .u-price{
+//   margin-left: -5px;
+// }
