--- a/src/pages/index/index.scss
+++ b/src/pages/index/index.scss
@@ -144,6 +144,7 @@
     /*FIXME:*/
     .news{
         position: relative;
+        z-index: 0;
     }
 
     
@@ -156,21 +157,108 @@
 
     .index-img-title{
         display:none ;
+        width: 70%;
         text-align: center;
-        background-color: #000;
         color: #81FC4D;
-        font-size: 1.7vw;
+        font-size: 1vw;
         font-weight: bold;
         position: absolute;
         top:50%;
         left: 50%;
         transform: translate(-50%,-50%);
 
+        h1{
+            font-size: 2vw;
+        }
+
+        .index-title-ract1{
+            position: absolute;
+            z-index:-1;
+            background-color: #000;
+            height: 30px;
+            width: 70%;
+            top:20%;
+            left: 50%;
+            transform: translate(-50%,-50%);
+        }
+        .index-title-ract2{
+            position: absolute;
+            z-index:-1;
+            background-color: #000;
+            height: 30px;
+            width: 70%;
+            top:55%;
+            left: 50%;
+            transform: translate(-50%,-50%);
+        }
+        .index-title-ract3{
+            position: absolute;
+            z-index:-1;
+            background-color: #000;
+            height: 30px;
+            width: 100%;
+            top:90%;
+            left: 50%;
+            transform: translate(-50%,-50%);
+        }
+        
+        .index-title-ract1-3{
+            position: absolute;
+            z-index:-1;
+            background-color: #000;
+            height: 30px;
+            width: 100%;
+            top:23%;
+            left: 50%;
+            transform: translate(-50%,-50%);
+        }
+        .index-title-ract1-4{
+            position: absolute;
+            z-index:-1;
+            background-color: #000;
+            height: 30px;
+            width: 90%;
+            top:23%;
+            left: 50%;
+            transform: translate(-50%,-50%);
+        }
+        
+        .index-title-ract3-4{
+            position: absolute;
+            z-index:-1;
+            background-color: #000;
+            height: 30px;
+            width: 80%;
+            top:90%;
+            left: 50%;
+            transform: translate(-50%,-50%);
+        }
+        .index-title-ract3-5{
+            position: absolute;
+            z-index:-1;
+            background-color: #000;
+            height: 30px;
+            width: 60%;
+            top:90%;
+            left: 50%;
+            transform: translate(-50%,-50%);
+        }
+        .index-title-ract2-5{
+            position: absolute;
+            z-index:-1;
+            background-color: #000;
+            height: 30px;
+            width: 90%;
+            top:55%;
+            left: 50%;
+            transform: translate(-50%,-50%);
+        }
+        
     }
     
     div.news:hover{
         
-        img{-webkit-filter:brightness(.5);
+        img{-webkit-filter:brightness(.8);
         
     }
     div{
