--- a/src/pages/Auction/style/auctionDetail.scss
+++ b/src/pages/Auction/style/auctionDetail.scss
@@ -279,3 +279,16 @@ body::-webkit-scrollbar {
     opacity: 0;
     background-color: red;
 }
+
+.fastuserlogin{
+    position: absolute;
+    display: inline-block;
+    width: 150px;
+    height: 150px;
+    // opacity: 0;
+    background-color: red;
+}
+
+.fastuserloginup{
+    position:relative;
+}
