--- a/src/pages/Auction/style/auctionDetail.scss
+++ b/src/pages/Auction/style/auctionDetail.scss
@@ -285,7 +285,7 @@ body::-webkit-scrollbar {
     display: inline-block;
     width: 150px;
     height: 150px;
-    // opacity: 0;
+    opacity: 0;
     background-color: red;
 }
 
