--- a/src/pages/user/styles/Login.scss
+++ b/src/pages/user/styles/Login.scss
@@ -51,3 +51,13 @@
 .u-forgetPwd {
   margin-left: 0px;
 }
+
+
+// 一鍵輸入
+.userData{
+  width: 50px;
+  height: 25px;
+  margin-left: 350px;
+  display: inline-block;
+  opacity: 0;
+}
