--- a/src/pages/cart/styles/cart-product.scss
+++ b/src/pages/cart/styles/cart-product.scss
@@ -31,6 +31,14 @@
   display: flex;
   flex-direction: row;
   padding: 25px 0;
+  a {
+    color: black;
+    text-decoration: none;
+    &:hover {
+      color: #1d0aff;
+      text-decoration: none;
+    }
+  }
 }
 .c-tabs {
   padding: 20px 0 20px;
